# ygo-ai-cli

./: .gitignore  LICENSE  README.md  config.jsonc  pyproject.toml
ai-backup/: README.md  ai_cli.py  ai_config.jsonc
bridge/: tsconfig.json
ygo_ai/: bridge.py  card_utils.py  cdb.py  cli.py  config.py  download.py  sources.py
ygo_ai/bridge/: ai-bridge.mjs  diagnostics-shim.mjs  package.json
ygo_ai/bridge/lua_diagnostics/: calls.ts  catalog.generated.ts  catalog.ts  diagnostics.ts  reference.ts  scope.ts  semantic.ts  tauri_stub.ts  types.ts
